Thu Apr 19 00:41:25 BST 2007  Olly Betts <olly@survex.com>

	* ruby/docs/bindings.html: Note that C++ operator() becomes
	  call in Ruby.

Wed Apr 18 23:35:52 BST 2007  Olly Betts <olly@survex.com>

	* ruby/util.i: Remove '%ignore' for deprecated methods we've now
	  removed.

Wed Apr 18 23:32:35 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/extra.i,python/pythontest.py: Fix legacy sequence API for
	  eset items.

Wed Apr 18 23:31:39 BST 2007  Olly Betts <olly@survex.com>

	* csharp/Makefile.am,java/org/xapian/Enquire.java,
	  java/org/xapian/XapianJNI.java,ruby/util.i,xapian.i:
	  Update for removal of Enquire::set_bias().

Wed Apr 18 17:09:22 BST 2007  Olly Betts <olly@survex.com>

	* guile/util.i,python/extra.i,python/util.i,ruby/util.i,tcl8/except.i,
	  tcl8/util.i: Sort out vim magic comments for all .i files.

Wed Apr 18 16:41:37 BST 2007  Olly Betts <olly@survex.com>

	* python/: svn:ignore doccomments.i.

Wed Apr 18 16:18:45 BST 2007  Olly Betts <olly@survex.com>

	* csharp/util.i,generic/except.i: Move C# specific exception stuff
	  into C# specific file.i.
	* csharp/util.i: Add vim magic to use C++ highlighting (not perfect as
	  this file also contains C# code, but better than vim's default for a
	  .i files).

Wed Apr 18 15:54:29 BST 2007  Olly Betts <olly@survex.com>

	* python/util.i: Use %inline to avoid duplicating MSET_DID, etc.  Set
	  C++ syntax for vim.

Wed Apr 18 15:37:20 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/doxy2swig.py.in: Fix issue with output from newer version
	  of Doxygen which puts <ref/> nodes inside <parametername/> nodes.

Wed Apr 18 02:34:53 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/extra.i: Improve various documentation comments.  Allow
	  _SequenceMixIn to have default values for some parameters,
	  instead of doing a lookup, to allow termlists and posting lists
	  to return the fake values returned by the old sequence API.  Add