@@ -1,0 +1,6 @@
+#!/bin/sh
+arg=`echo "$1"|sed 's!.*/!!;s!\.class$!!'`
+# Use libtool's -dlopen option to ensure that libxapian_jni.so (or whatever)
+# is in the shared library path.
+${LIBTOOL-../libtool} --mode=execute -dlopen libxapian_jni.la \
+  ${JAVA-java} -classpath built/xapian_jni.jar${PATHSEP-:}. "$arg"
